--- a/ClientApp/src/app/pdr-management/pdr-management.component.html
+++ b/ClientApp/src/app/pdr-management/pdr-management.component.html
@@ -2048,7 +2048,7 @@
                                      [defaultColDef]="defaultColDef"
                                      [rowData]="datamicro"
                                      [overlayLoadingTemplate]="overlayLoadingTemplate"
-                                     (gridReady)="onGridReadytwo($event)">
+                                     (gridReady)="onGridReadythree($event)">
                     </ag-grid-angular>
                   </div>
                 </div>
