--- a/ClientApp/src/app/raw-material/raw-material.component.html
+++ b/ClientApp/src/app/raw-material/raw-material.component.html
@@ -370,7 +370,7 @@
             </div>
             <div class="form-inline">
               <label for="inputcust" style="color:forestgreen;">Previous Price $</label>
-              <input style="width: 50%;text-align:right" type="text" class="form-control" [(ngModel)]="PreviousCost" name="PreviousCos" value="" (blur)=" blurpreviousprice($event);">
+              <input disabled style="width: 50%;text-align:right" type="text" class="form-control" [(ngModel)]="PreviousCost" name="PreviousCos" value="" (blur)=" blurpreviousprice($event);">
             </div>
           </div>
         </div>
