--- a/ClientApp/src/app/formula-lookup/create-lab-tkts/create-lab-tkts.component.html
+++ b/ClientApp/src/app/formula-lookup/create-lab-tkts/create-lab-tkts.component.html
@@ -1,5 +1,3 @@
-
-
 <div style="background-color: #f6f5f1">
   <div style="overflow-y:auto;overflow-x:hidden; height:80vh;width:100%">
     <div class="col-sm-12">
@@ -15,39 +13,35 @@
       <div class="form-group col-md-6">
         <div class="form-inline">
           <label class="label1" style="font-size: medium;
-  font-family: Verdana;" >Formula #</label>
+  font-family: Verdana;">Formula #</label>
           <input style="width: 70%;" type="text" class="form-control" [(ngModel)]="cformulaode" value="" id="cformco">
         </div>
         <div class="form-inline">
-          <label class="label1"style="font-size: medium;
-  font-family: Verdana;" >PDR #</label>
+          <label class="label1" style="font-size: medium;
+  font-family: Verdana;">PDR #</label>
           <input style="width: 70%;" type="text" class="form-control" [(ngModel)]="cPDRNo" value="" id="cPDRn">
         </div>
         <div class="form-inline">
-          <label class="label1"style="font-size: medium;
-  font-family: Verdana;" >Lab Batch #</label>
+          <label class="label1" style="font-size: medium;
+  font-family: Verdana;">Lab Batch #</label>
           <input style="width: 70%;" type="text" class="form-control" [(ngModel)]="clabbatch" value="" id="clabb">
         </div>
       </div>
       <div class="form-group col-md-6">
         <div class="form-inline">
-          <label class="label1"style="font-size: medium;
-  font-family: Verdana;" >Formula Name</label>
+          <label class="label1" style="font-size: medium;
+  font-family: Verdana;">Formula Name</label>
           <input style="width: 60%;" type="text" class="form-control" [(ngModel)]="cformulaname" value="" id="cformna">
         </div>
         <div class="form-inline">
-          <label class="label1"style="font-size: medium;
-  font-family: Verdana;" >Project Name</label>
+          <label class="label1" style="font-size: medium;
+  font-family: Verdana;">Project Name</label>
           <input style="width: 60%;" type="text" class="form-control" [(ngModel)]="cprojectname" value="" id="cprojectn">
         </div>
         <div class="form-inline">
-          <label class="label1"style="font-size: medium;
-  font-family: Verdana;" for="inputcust" >Batch Date</label>
-          <select id="PRD" class="form-control" style="width:20%;margin-left:.7%">
-            <option selected>06/18/2021</option>
-            <option>g</option>
-            <option>cc</option>
-          </select>
+          <label class="label1" style="font-size: medium;
+  font-family: Verdana;" for="inputcust">Batch Date</label>
+          <input type="date" style="width:20%" class="form-control" id="startdate" name="strdate" [(ngModel)]="currentstartDate" #curstartdate value="" (change)="changestartdate($event)">
           <label style="margin-left:4.7%;font-size: medium;
   font-family: Verdana;">Customer</label>
           <input style="width: 25%;margin-left:1%" type="text" class="form-control" [(ngModel)]="ccustomerdet" value="" id="ccusto">
@@ -58,31 +52,38 @@
       <div class="form-group col-md-12">
         <div class="form-inline">
           <h3 style="margin-left:1%;text-decoration-color:black">Enter the Lab Batch Size and Default Formula Unit</h3>
-          <input style="width: 25%;margin-left:15px" type="text" class="form-control">
-          <select id="PRD" class="form-control" style="width:5%;margin-left:1%">
+          <input style="width: 25%;margin-left:15px" type="text" class="form-control" [(ngModel)]="labbatchsize">
+          <select id="PRD" class="form-control" style="width:5%;margin-left:1%" (change)="onChange($event.target.value)">
             <option selected>g</option>
-            <option>1</option>
-            <option>2</option>
-            <option>3</option>
-            <option>4</option>
-            <option>5</option>
+            <option>Kg</option>
+            <option>cc</option>
+            <option>Ltr</option>
+            <option>Gal</option>
+            <option>Lb</option>
+            <option>mg</option>
+            <option>oz</option>
+            <option>PT</option>
+            <option>mcg</option>
+            <option>fl oz</option>
+            <option>tsp</option>
+            <option>Tbsp</option>
           </select>
-          <button type="submit" class="btn btn-primary buttoncolor " style="margin-left:1%">Ok</button>
-       
-            <input class="form-check-input "  style="margin-left:1%" type="radio" id="Yes" name="Yes" value="Yes">
-            <label style="color:maroon" for="Yes">LAB</label><br>
-            <input class="form-check-input " type="radio" id="Yes" style="margin-left:1%" name="Yes" value="Yes">
-            <label style="color:maroon" for="Yes">PILOT</label><br>
-            <input class="form-check-input " type="radio" id="Yes" style="margin-left:1%" name="Yes" value="Yes">
-            <label style="color:maroon" for="Yes">PRE-PRODUCTION</label><br>
-         
+          <button type="submit" class="btn btn-primary buttoncolor " style="margin-left:1%" (click)="okclick()">Ok</button>
+
+          <input class="form-check-input " style="margin-left:1%" type="radio" id="Yes" name="Yes" value="Yes">
+          <label style="color:maroon" for="Yes">LAB</label><br>
+          <input class="form-check-input " type="radio" id="Yes" style="margin-left:1%" name="Yes" value="Yes">
+          <label style="color:maroon" for="Yes">PILOT</label><br>
+          <input class="form-check-input " type="radio" id="Yes" style="margin-left:1%" name="Yes" value="Yes">
+          <label style="color:maroon" for="Yes">PRE-PRODUCTION</label><br>
+
         </div>
       </div>
     </div>
 
 
     <div style="background-color:white">
-      <table class="table table-bordered" style="background-color:white;height:420px">
+      <!--<table class="table table-bordered" style="background-color:white;height:420px">
 
 
         <thead>
@@ -99,30 +100,126 @@
             <th scope="col">Init 1</th>
             <th scope="col">Init 2</th>
           </tr>
+          <tr *ngFor="let stablityload of stability_data">
+            <td class="tabledatasize">{{ stablityload.Step}}</td>
+            <td class="tabledatasize">{{ stablityload.ItemCode}}</td>
+            <td class="tabledatasize">{{ stablityload.INCIName}}</td>
+            <td class="tabledatasize">{{ stablityload.Percentage}}</td>
+            <td class="tabledatasize">{{ stablityload.Quantity}}</td>
+            <td class="tabledatasize">{{ stablityload.Unit}}</td>
+            <td class="tabledatasize">{{ stablityload.ActualQty}}</td>
+            <td class="tabledatasize">{{ stablityload.Unitcost}}</td>
+            <td class="tabledatasize">{{ stablityload.cost}}</td>
+            <td class="tabledatasize">{{ stablityload.Init1}}</td>
+            <td class="tabledatasize">{{ stablityload.Init2}}</td>
+          </tr>
         </thead>
         <tbody>
-         
+
 
 
 
         </tbody>
-      </table>
+      </table>-->
+      <mat-progress-spinner class="center" style="display: flex; justify-content: center; align-items: center; " *ngIf="isLoading;else conten" color="accent"
+                            mode="indeterminate">
+      </mat-progress-spinner>
+      <dx-data-grid id="gridContainer " style="width: 100%; height: 30rem;font-family:Verdana;font-style:normal;background-color:white"
+                    (onRowPrepared)="onRowPrepared2($event)"
+                    (onSelectionChanged)="selectedChanged($event)"
+                    [columnAutoWidth]="true"
+                    [dataSource]="pilotlab_data"
+                    [wordWrapEnabled]="true"
+                    [showColumnLines]="true"
+                    [showRowLines]="true"
+                    [showBorders]="true"
+                    (rowprepared)="rowprepared">
+        <dxo-editing mode="row"
+                     [allowUpdating]="true"
+                     [useIcons]="true">
+        </dxo-editing>-->
+
+        <dxo-selection [selectAllMode]="allMode"
+                       [showCheckBoxesMode]="checkBoxesMode"
+                       mode="multiple"></dxo-selection>
+        <dxo-row-dragging [allowReordering]="true"
+                          [showDragIcons]="showDragIcons"></dxo-row-dragging>
+        <dxo-scrolling mode="virtual"></dxo-scrolling>
+        <dxo-sorting mode="none"></dxo-sorting>
+
+        <dxo-column-chooser [enabled]="false"></dxo-column-chooser>
+        <dxo-column-fixing [enabled]="true"></dxo-column-fixing>
+
+        <dxi-column type="buttons" [width]="50">
+        </dxi-column>
+
+        <dxi-column dataField="" [width]="50"></dxi-column>
+
+        <dxi-column dataField="Step" headerCellTemplate="addressHeaderTemplateStep"></dxi-column>
+        <div *dxTemplate="let info of 'addressHeaderTemplateStep'">
+          <b style="color: black">Step</b>
+        </div>
+        <dxi-column dataField="ItemCode" headerCellTemplate="addressHeaderTemplateItemCode"></dxi-column>
+        <div *dxTemplate="let info of 'addressHeaderTemplateItemCode'">
+          <b style="color: black">ItemCode</b>
+        </div>
+        <dxi-column dataField="INCIName" headerCellTemplate="addressHeaderTemplateINCIName"></dxi-column>
+        <div *dxTemplate="let info of 'addressHeaderTemplateINCIName'">
+          <b style="color: black">INCIName</b>
+        </div>
+        <dxi-column dataField="Percentage" headerCellTemplate="addressHeaderTemplatePercentage"></dxi-column>
+        <div *dxTemplate="let info of 'addressHeaderTemplatePercentage'">
+          <b style="color: black">Percentage</b>
+        </div>
+        <dxi-column dataField="Quantity" headerCellTemplate="addressHeaderTemplateQuantity"></dxi-column>
+        <div *dxTemplate="let info of 'addressHeaderTemplateQuantity'">
+          <b style="color: black">Quantity</b>
+        </div>
+        <dxi-column dataField="Unit" headerCellTemplate="addressHeaderTemplateUnit"></dxi-column>
+        <div *dxTemplate="let info of 'addressHeaderTemplateUnit'">
+          <b style="color: black">Unit</b>
+        </div>
+        <dxi-column dataField="ActualQty" headerCellTemplate="addressHeaderTemplateActualQty"></dxi-column>
+        <div *dxTemplate="let info of 'addressHeaderTemplateActualQty'">
+          <b style="color: black">ActualQty</b>
+        </div>
+        <dxi-column dataField="Unitcost" headerCellTemplate="addressHeaderTemplateUnitcost"></dxi-column>
+        <div *dxTemplate="let info of 'addressHeaderTemplateUnitcost'">
+          <b style="color: black">Unitcost</b>
+        </div>
+        <dxi-column dataField="Unitcost" headerCellTemplate="addressHeaderTemplatecomments"></dxi-column>
+        <div *dxTemplate="let info of 'addressHeaderTemplatecomments'">
+          <b style="color: black">Unit Price $</b>
+        </div>
+        <dxi-column dataField="cost" headerCellTemplate="addressHeaderTemplatecost"></dxi-column>
+        <div *dxTemplate="let info of 'addressHeaderTemplatecost'">
+          <b style="color: black">cost</b>
+        </div>
+        <dxi-column dataField="Init1" headerCellTemplate="addressHeaderTemplateInit1"></dxi-column>
+        <div *dxTemplate="let info of 'addressHeaderTemplateInit1'">
+          <b style="color: black">Init1</b>
+        </div>
+        <dxi-column dataField="Init2" headerCellTemplate="addressHeaderTemplateInit2"></dxi-column>
+        <div *dxTemplate="let info of 'addressHeaderTemplateInit2'">
+          <b style="color: black">Init2</b>
+        </div>
+      </dx-data-grid>
     </div>
     <div class="form-inline">
 
 
       <h3 style="margin-left:32%; " for="TotalQuantity">Total Quantity/Value $</h3>
-      <input type="text" style="margin-left:10px;width:10%" class="form-control" placeholder="">
-      <input type="text" style="margin-left:10px;width:6%" class="form-control" placeholder="">
+      <input type="text" style="margin-left:10px;width:10%" class="form-control" placeholder="" [(ngModel)]="qty">
+      <input type="text" style="margin-left:10px;width:6%" class="form-control" placeholder="" [(ngModel)]="unit1">
       <input type="text" style="margin-left:10px;width:30%" class="form-control" placeholder="">
     </div>
     <div class="form-inline">
 
 
       <h4 style="margin-left:39.5%;color:blue" for="TotalQuantity">At 25 'C ph</h4>
-      <input type="text" style="margin-left:10px;width:10%" class="form-control" placeholder="">
+      <input type="text" style="margin-left:10px;width:10%" class="form-control" placeholder="" [(ngModel)]="ph">
       <h4 for="inputcust" style="margin-left:2.5%;color:blue">Viscosity</h4>
-      <input type="text" style="margin-left:10px;width:30%" class="form-control" placeholder="">
+      <input type="text" style="margin-left:10px;width:30%" class="form-control" placeholder="" [(ngModel)]="Viscosity">
 
 
     </div>
@@ -131,24 +228,16 @@
 </div>
 <div style="margin-top:0.5%">
   <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;height:50px;width:100px;" matDialogClose>Close</button>
-  <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;height:50px;width:100px;margin-right:10px">Save</button>
+  <button type="submit" [hidden]="islabatchsave" class="btn btn-primary  buttoncolor" style="float:right;height:50px;width:100px;margin-right:10px" (click)="Labbatch_Save()">Save</button>
+  <button type="submit" [hidden]="islabatchupdate" class="btn btn-primary  buttoncolor" style="float:right;height:50px;width:100px;margin-right:10px">Update</button>
   <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;height:50px;width:100px;margin-right:10px">New</button>
   <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;height:50px;width:100px;margin-right:10px">Delete</button>
   <button type="submit" class="btn btn-primary  buttoncolor" style="float:left;height:50px;margin-right:10px">Print Preview</button>
   <form class="form-inline" style="margin-top:1%">
-    <input class="form-check-input " type="radio" style="" id="Yes" name="Yes" value="Yes">
-    <label style="color:maroon" for="Yes">Approve</label><br>
+    <mat-radio-button value="true" [checked]="IncidIngredient == 'Yes' ? true : false"
+                      (change)="radioChangeIncidIngredient($event)">Approve</mat-radio-button>
+    <!--<label style="color:maroon" for="Yes">Approve</label><br>-->
     <input class="form-check-input " type="radio" id="Yes" style="margin-left:2%" name="Yes" value="Yes">
     <label style="color:maroon" for="Yes">Rejected</label><br>
   </form>
 </div>
-
-
-
-
-
-
-
-
-
-
